# aliyun-oss-rust-sdk

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: auth.rs  entity.rs  error.rs  lib.rs  macros.rs  metadata.rs  object.rs  oss.rs  request.rs  url.rs  util.rs
src/async_impl/: mod.rs  object.rs
src/blocking/: object.rs
