[package]
name = "aliyun-oss-rust-sdk"
version = "0.0.3"
edition = "2021"
authors = ["lake"]
description = "阿里云OSS Rust SDK"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[workspace]
#members = [
#    "./example",
#]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
hmac = "0.12.1"
base64 = "0.21.5"
sha1 = "0.10.6"
urlencoding = "2.1.3"
strum = "0.25.0"
strum_macros = "0.25.0"
anyhow = "1.0.79"
dotenvy = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
