[package]
name = "aliyun-oss-rust-sdk"
version = "0.0.8"
edition = "2021"
authors = ["aliyun","lake"]
description = "阿里云 © Alibaba Cloud Official Oss SDK(标准库)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
hmac = "0.12.1"
base64 = "0.21.5"
sha1 = "0.10.6"
urlencoding = "2.1.3"
strum = "0.25.0"
strum_macros = "0.25.0"
anyhow = "1.0.79"
dotenvy = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0.110"
[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
