[package]
name = "aliyun-oss-rust-sdk"
version = "0.2.0"
edition = "2021"
authors = ["lake"]
description = "阿里云 © Alibaba Cloud Official Oss SDK (标准库)"
license = "MIT"
repository = "https://github.com/dounine/aliyun-oss-rust-sdk"

[workspace]
members = ["example"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
hmac = "0.12.1"
base64 = "0.21.5"
sha1 = "0.10.6"
urlencoding = "2.1.3"
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
serde_json = "1.0.110"
thiserror = "1.0.30"
[features]
default = []
blocking = ["reqwest/blocking"]
debug-print = ["tracing", "tracing-subscriber"]
[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15"
tokio = { version = "1.35.1", features = ["full"] }
