[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliyun-oss-rust-sdk = { path = "..", features = ["async", "debug-print"] }
dotenvy = "0.15"
tokio = { version = "1.15", features = ["full"] }